source/static/stylesheets/pages/index.css
/* Hero Section */

.Hero__Title {
    margin-bottom: 3rem;
}

.Hero__Image {
    float: left;

    width: calc(50% - 3rem);
    max-width: 20rem;
    margin-right: 3rem;
    margin-bottom: 1rem;
}

.Hero__Image img {
    display: block;
    width: 100%;
    height: 100%;
}

.Hero__Content {
    padding-top: 1rem;
}

.SocialLinks {
    display: inline-flex;
    vertical-align: top;
    margin-left: 8px;
}

.SocialLink {
    width: 2.4rem;
    height: 2.4rem;
    font-size: 0;
    background: url("../../images/icons/social-icons.svg") center center no-repeat;
    background-size: auto 100%;
}

.SocialLink:not(:last-child) {
    margin-right: 8px;
}

.SocialLink--github     { background-position-x: 0; }
.SocialLink--twitter    { background-position-x: calc(24px * -1); }
.SocialLink--devto      { background-position-x: calc(24px * -2) }
.SocialLink--instagram  { background-position-x: calc(24px * -3); }
.SocialLink--linkedin   { background-position-x: calc(24px * -4); }



/* Talks Section */

.Talks .Item {
    margin: 2rem 0;
}

.Talks .Item__Date {
    margin-bottom: 8px;
}

.Talks .Item__Heading {
    margin-bottom: 0;
}

@media (min-width: 500px) {
    .Talks .Items {
        padding-left: 5rem;
    }
}

